--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/forest"
     tools:context="com.psu.sweng500.team4.parkpal.LoginActivity">
 
     <!-- Login progress -->
@@ -44,8 +45,9 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/text_or"
                 android:textAlignment="center"
-                android:textStyle="italic"
-                android:textSize="18sp" />
+                android:textColor="@android:color/background_light"
+                android:textSize="18sp"
+                android:textStyle="italic" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
@@ -55,6 +57,7 @@
                     android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/background_light"
                     android:hint="@string/prompt_email"
                     android:inputType="textEmailAddress"
                     android:maxLines="1"
@@ -70,6 +73,7 @@
                     android:id="@+id/password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:background="@android:color/background_light"
                     android:hint="@string/prompt_password"
                     android:imeActionId="@+id/login"
                     android:imeActionLabel="@string/action_sign_in_short"
