Updated custom panel with icons. Updated the code to pull info into a custom info panel without being limited to just snippet and title

--- a/app/src/main/res/layout/marker_info_layout.xml
+++ b/app/src/main/res/layout/marker_info_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -23,18 +24,45 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/tvLat"
+            android:id="@+id/tvPhone"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:drawablePadding="5dp"
+            android:drawableLeft="@drawable/phone_icon" />
 
         <TextView
-            android:id="@+id/tvLng"
+            android:id="@+id/tvAddress"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:drawablePadding="5dp"
+            android:drawableLeft="@drawable/location_icon" />
 
         <TextView
             android:id="@+id/tvSnippet"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:textSize="15sp"/>
+
+        <TextView
+            android:id="@+id/tvSeason"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:drawablePadding="5dp"
+            android:drawableLeft="@drawable/calendar_icon"
+            android:textStyle="italic"/>
+        <TextView
+            android:id="@+id/tvAmenities"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingLeft="20dp"
+            android:textSize="15sp"
+            android:textStyle="bold"/>
+
+
     </LinearLayout>
+
 </LinearLayout>
