Copied preferences from profile over to register layout.  Changed default values in register to be hints instead of text

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -176,6 +176,14 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="20dp" />
 
+                            <TextView
+                                android:id="@+id/preferences"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="@string/preferences"
+                                android:textAlignment="center"
+                                android:textStyle="bold" />
+
                             <Switch
                                 android:id="@+id/prefs_kids"
                                 android:layout_width="match_parent"
