--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -32,48 +32,48 @@
 
             <EditText
                 android:id="@+id/firstName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:hint="First Name"
                 android:inputType="textPersonName"
-                android:text="First Name"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="16dp" />
 
             <EditText
                 android:id="@+id/lastName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:hint="Last Name"
                 android:inputType="textPersonName"
-                android:text="Last Name"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="59dp" />
 
             <EditText
                 android:id="@+id/userName"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:hint="User Name"
                 android:inputType="textPersonName"
-                android:text="User Name"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="229dp" />
 
             <EditText
                 android:id="@+id/email"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:hint="Email"
                 android:inputType="textEmailAddress"
-                android:text="Email"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="102dp" />
 
             <TextView
                 android:id="@+id/textView3"
-                android:layout_width="132dp"
-                android:layout_height="33dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:text="Password"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 tools:layout_editor_absoluteX="16dp"
@@ -81,7 +81,7 @@
 
             <EditText
                 android:id="@+id/password"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPassword"
@@ -90,8 +90,8 @@
 
             <TextView
                 android:id="@+id/text"
-                android:layout_width="132dp"
-                android:layout_height="33dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:text="Confirm Password"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 tools:layout_editor_absoluteX="16dp"
@@ -99,7 +99,7 @@
 
             <EditText
                 android:id="@+id/conPassword"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="textPassword"
@@ -108,23 +108,137 @@
 
             <EditText
                 android:id="@+id/birthdate"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:hint="Date of Birth"
                 android:inputType="date"
-                android:text="Date of Birth"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="143dp" />
 
             <EditText
                 android:id="@+id/zipCode"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
+                android:hint="ZIP CODE"
                 android:inputType="number"
-                android:text="ZIP CODE"
                 tools:layout_editor_absoluteX="16dp"
                 tools:layout_editor_absoluteY="186dp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
+            <TextView
+                android:id="@+id/preferences"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/preferences"
+                android:textAlignment="center"
+                android:textStyle="bold" />
+
+            <Switch
+                android:id="@+id/prefs_kids"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/prefs_kids"
+                android:textSize="18sp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <Switch
+                android:id="@+id/prefs_dogs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/prefs_dogs"
+                android:textSize="18sp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+            <Switch
+                android:id="@+id/prefs_watersports"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/prefs_watersports"
+                android:textSize="18sp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <Switch
+                android:id="@+id/prefs_hiking"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/prefs_hiking"
+                android:textSize="18sp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <Switch
+                android:id="@+id/prefs_camping"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/prefs_camping"
+                android:textSize="18sp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <Switch
+                android:id="@+id/prefs_forest"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/prefs_forest"
+                android:textSize="18sp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <Switch
+                android:id="@+id/prefs_mountain"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/prefs_mountain"
+                android:textSize="18sp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <Switch
+                android:id="@+id/prefs_desert"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/prefs_desert"
+                android:textSize="18sp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
+
+            <Switch
+                android:id="@+id/prefs_beach"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/prefs_beach"
+                android:textSize="18sp" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="10dp" />
 
             <Button
                 android:id="@+id/submit"
