--- a/app/src/main/res/layout/activity_park_details.xml
+++ b/app/src/main/res/layout/activity_park_details.xml
@@ -7,7 +7,7 @@
     tools:context="com.psu.sweng500.team4.parkpal.ParkDetails">
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="367dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="10dp">
@@ -64,15 +64,23 @@
                 android:textSize="15sp"
                 android:textStyle="bold" />
 
+            <TextView
+                android:id="@+id/tvCurrentTemp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="20dp"
+                android:textSize="15sp"
+                android:textStyle="bold" />
+
         </LinearLayout>
 
         <TextView
             android:id="@+id/tvRating"
-            android:layout_width="wrap_content"
+            android:layout_width="74dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="Rating"
-            android:textSize="15sp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
         <LinearLayout
@@ -82,7 +90,7 @@
 
             <RatingBar
                 android:id="@+id/ratingBar"
-                style="@style/Widget.AppCompat.RatingBar.Small"
+                style="@style/Widget.AppCompat.RatingBar.Indicator"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:isIndicator="true"
@@ -93,42 +101,48 @@
             <TextView
                 android:id="@+id/tvRatNum"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="10dp"
+                android:layout_height="match_parent"
+                android:paddingLeft="2dp"
+                android:paddingTop="10dp"
                 android:text="(347)"
                 android:textColor="@color/colorAccent"
-                android:textSize="13sp" />
+                android:textSize="15sp" />
 
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:weightSum="1">
 
-            <TextView
-                android:id="@+id/tvReview"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="174dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:text="Write a Review"
-                android:textSize="15sp"
-                android:textStyle="bold" />
+                android:id="@+id/rLayout">
 
-            <TextView
-                android:id="@+id/tvAddReview"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="5dp"
-                android:text="Share your experience here."
-                android:textSize="15sp" />
+                <Button
+                    android:id="@+id/addReview"
+                    android:layout_width="172dp"
+                    android:layout_height="38dp"
+                    android:text="Write a Review"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
 
             <ImageButton
                 android:id="@+id/imageButton"
-                android:layout_width="38dp"
-                android:layout_height="38dp"
-                android:paddingTop="15dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:adjustViewBounds="true"
+                android:maxHeight="20dp"
+                android:maxWidth="20dp"
+                android:padding="0dp"
+                android:paddingBottom="0dp"
+                android:paddingTop="0dp"
+                android:scaleType="fitCenter"
                 app:srcCompat="@mipmap/ic_addphoto" />
+
 
         </LinearLayout>
 
