--- a/app/src/main/res/layout/marker_info_layout.xml
+++ b/app/src/main/res/layout/marker_info_layout.xml
@@ -3,13 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <RelativeLayout
+        android:id="@+id/counterValuePanel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" >
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginRight="5dp"
-        android:adjustViewBounds="true"
-        android:src="@drawable/camp_icon"/>
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginRight="5dp"
+            android:adjustViewBounds="true"
+            android:src="@drawable/camp_icon"/>
+
+        <TextView
+            android:id="@+id/tvAlerts"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="16sp"
+
+            android:textColor="#F00" />
+    </RelativeLayout>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -41,6 +56,7 @@
             android:layout_height="wrap_content"
             android:textSize="15sp"
             android:textStyle="bold"/>
+
     </LinearLayout>
 
 
