Added "Recent Alerts" list to Park Details page.  Updated Park Alert notification to include locatio name.

--- a/app/src/main/res/layout/activity_park_details.xml
+++ b/app/src/main/res/layout/activity_park_details.xml
@@ -4,192 +4,230 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:scrollbars="vertical"
     tools:context="com.psu.sweng500.team4.parkpal.ParkDetails">
 
-    <LinearLayout
-        android:layout_width="367dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="10dp">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/tvLocation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="25sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tvPhone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/phone_icon"
-                android:drawablePadding="5dp"
-                android:textSize="18sp" />
-
-            <TextView
-                android:id="@+id/tvAddress"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/location_icon"
-                android:drawablePadding="5dp"
-                android:textSize="15sp" />
-
-            <TextView
-                android:id="@+id/tvSnippet"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="20dp"
-                android:textSize="15sp" />
-
-            <TextView
-                android:id="@+id/tvSeason"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableLeft="@drawable/calendar_icon"
-                android:drawablePadding="5dp"
-                android:textSize="15sp"
-                android:textStyle="italic" />
-
-            <TextView
-                android:id="@+id/tvAmenities"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="20dp"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/tvCurrentTemp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingLeft="20dp"
-                android:textSize="15sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/tvRating"
-            android:layout_width="74dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:text="Rating"
-            android:textSize="20sp"
-            android:textStyle="bold" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <RatingBar
-                android:id="@+id/ratingBar"
-                style="@style/Widget.AppCompat.RatingBar.Indicator"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:isIndicator="true"
-                android:numStars="5"
-                android:rating="4"
-                android:stepSize="1" />
-
-            <TextView
-                android:id="@+id/tvRatNum"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:paddingLeft="2dp"
-                android:paddingTop="10dp"
-                android:text="(347)"
-                android:textColor="@color/colorAccent"
-                android:textSize="15sp" />
-
-        </LinearLayout>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:weightSum="1">
+            android:padding="10dp"
+            android:scrollIndicators="right"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbarStyle="insideOverlay"
+            android:scrollbars="vertical">
 
-            <RelativeLayout
-                android:layout_width="174dp"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/rLayout">
+                android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/addReview"
-                    android:layout_width="172dp"
-                    android:layout_height="38dp"
-                    android:text="Write a Review"
+                <TextView
+                    android:id="@+id/tvLocation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="25sp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvPhone"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/phone_icon"
+                    android:drawablePadding="5dp"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/tvAddress"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/location_icon"
+                    android:drawablePadding="5dp"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/tvSnippet"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/tvSeason"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@drawable/calendar_icon"
+                    android:drawablePadding="5dp"
+                    android:textSize="15sp"
+                    android:textStyle="italic" />
+
+                <TextView
+                    android:id="@+id/tvAmenities"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
                     android:textSize="15sp"
                     android:textStyle="bold" />
-            </RelativeLayout>
 
-            <ImageButton
-                android:id="@+id/imageButton"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:adjustViewBounds="true"
-                android:maxHeight="20dp"
-                android:maxWidth="20dp"
-                android:padding="0dp"
-                android:paddingBottom="0dp"
-                android:paddingTop="0dp"
-                android:scaleType="fitCenter"
-                app:srcCompat="@mipmap/ic_addphoto" />
+                <TextView
+                    android:id="@+id/tvCurrentTemp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:textSize="15sp"
+                    android:textStyle="bold" />
 
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/tvRating"
+                android:layout_width="74dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Rating"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <RatingBar
+                    android:id="@+id/ratingBar"
+                    style="@style/Widget.AppCompat.RatingBar.Indicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:isIndicator="true"
+                    android:numStars="5"
+                    android:rating="4"
+                    android:stepSize="1" />
+
+                <TextView
+                    android:id="@+id/tvRatNum"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:paddingLeft="2dp"
+                    android:paddingTop="10dp"
+                    android:text="(347)"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="15sp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:weightSum="1">
+
+                <RelativeLayout
+                    android:id="@+id/rLayout"
+                    android:layout_width="174dp"
+                    android:layout_height="wrap_content">
+
+                    <Button
+                        android:id="@+id/addReview"
+                        android:layout_width="172dp"
+                        android:layout_height="38dp"
+                        android:text="Write a Review"
+                        android:textSize="15sp"
+                        android:textStyle="bold" />
+                </RelativeLayout>
+
+                <ImageButton
+                    android:id="@+id/imageButton"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:adjustViewBounds="true"
+                    android:maxHeight="20dp"
+                    android:maxWidth="20dp"
+                    android:padding="0dp"
+                    android:paddingBottom="0dp"
+                    android:paddingTop="0dp"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@mipmap/ic_addphoto" />
+
+
+            </LinearLayout>
+
+
+            <ExpandableListView
+                android:id="@+id/parkNotes"
+                android:layout_width="fill_parent"
+                android:layout_height="121dp"
+                android:groupIndicator="@drawable/group_indicator"
+                android:indicatorRight="25dp"
+                android:transcriptMode="alwaysScroll" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <RelativeLayout
+                    android:layout_width="0dip"
+                    android:layout_height="50dp"
+                    android:layout_weight="0.5">
+
+                    <Button
+                        android:id="@+id/addNote"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:drawableLeft="@android:drawable/ic_input_add"
+                        android:text="Note"
+                        android:textSize="18sp" />
+
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:layout_width="0dip"
+                    android:layout_height="50dp"
+                    android:layout_weight="0.5">
+
+                    <Button
+                        android:id="@+id/addAlert"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:drawableLeft="@android:drawable/ic_input_add"
+                        android:text="Alert"
+                        android:textSize="18sp" />
+                </RelativeLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:visibility="visible">
+
+                <TextView
+                    android:id="@+id/textViewAlert"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_weight="1"
+                    android:text="Recent alerts"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <ListView
+                    android:id="@+id/parkAlerts"
+                    android:layout_width="match_parent"
+                    android:layout_height="150dp"
+                    android:groupIndicator="@drawable/group_indicator"
+                    android:indicatorRight="25dp"
+                    android:transcriptMode="alwaysScroll"
+                    android:visibility="visible" />
+
+            </LinearLayout>
 
         </LinearLayout>
-
-
-        <ExpandableListView
-            android:id="@+id/parkNotes"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:groupIndicator="@drawable/group_indicator"
-            android:indicatorRight="25dp"
-            android:transcriptMode="alwaysScroll" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal"
-            android:padding="10dp">
-
-            <RelativeLayout
-                android:layout_width="0dip"
-                android:layout_height="50dp"
-                android:layout_weight="0.5">
-
-                <Button
-                    android:id="@+id/addNote"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:drawableLeft="@android:drawable/ic_input_add"
-                    android:text="Note"
-                    android:textSize="18sp" />
-
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="0dip"
-                android:layout_height="50dp"
-                android:layout_weight="0.5">
-
-                <Button
-                    android:id="@+id/addAlert"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:drawableLeft="@android:drawable/ic_input_add"
-                    android:text="Alert"
-                    android:textSize="18sp" />
-            </RelativeLayout>
-        </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
 </android.support.design.widget.CoordinatorLayout>
