Updated backend.  Tied recommendation engine into app. Removed Search option since we're not doing anything with it.

--- a/app/src/main/res/layout/fragment_recommendations.xml
+++ b/app/src/main/res/layout/fragment_recommendations.xml
@@ -4,10 +4,9 @@
     android:layout_height="match_parent"
     tools:context="com.psu.sweng500.team4.parkpal.RecommendationsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ListView
+        android:id="@+id/recommendations"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/title_recommendations" />
-
+        android:clickable="true" />
 </FrameLayout>
