--- a/app/src/main/res/layout/activity_park_details.xml
+++ b/app/src/main/res/layout/activity_park_details.xml
@@ -117,9 +117,9 @@
             android:weightSum="1">
 
             <RelativeLayout
+                android:id="@+id/rLayout"
                 android:layout_width="174dp"
-                android:layout_height="wrap_content"
-                android:id="@+id/rLayout">
+                android:layout_height="wrap_content">
 
                 <Button
                     android:id="@+id/addReview"
@@ -128,6 +128,50 @@
                     android:text="Write a Review"
                     android:textSize="15sp"
                     android:textStyle="bold" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/ratingId"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/grey"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <TextView
+                    android:id="@+id/tvProfileName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:drawableLeft="@mipmap/ic_profile"
+                    android:drawablePadding="5dp"
+                    android:text="Stefanie"
+                    android:textSize="15sp" />
+
+                <RatingBar
+                    android:id="@+id/userRatingBar"
+                    style="@style/Widget.AppCompat.RatingBar.Small"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="48dp"
+                    android:layout_marginStart="48dp"
+                    android:isIndicator="true"
+                    android:numStars="5"
+                    android:rating="4"
+                    android:stepSize=".5" />
+
+                <TextView
+                    android:id="@+id/tvRatingComment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/userRatingBar"
+                    android:layout_marginLeft="48dp"
+                    android:paddingTop="15dp"
+                    android:text="This is a great place!"
+                    android:textSize="12sp" />
             </RelativeLayout>
 
             <ImageButton
@@ -171,7 +215,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:drawableLeft="@android:drawable/ic_input_add"
-                    android:text="Note"
+                    android:text="Comment"
                     android:textSize="18sp" />
 
             </RelativeLayout>
