--- a/app/src/main/res/layout/park_notes_layout.xml
+++ b/app/src/main/res/layout/park_notes_layout.xml
@@ -38,6 +38,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:text="note"
+        android:text="comment"
         android:textColor="@color/black"/>
 </LinearLayout>
