Attempt at photos

--- a/app/src/main/res/layout/activity_park_details.xml
+++ b/app/src/main/res/layout/activity_park_details.xml
@@ -191,6 +191,20 @@
                 android:scaleType="fitCenter"
                 app:srcCompat="@mipmap/ic_addphoto" />
 
+            <ImageView
+                android:id="@+id/parkView"
+                android:layout_width="150dp"
+                android:layout_height="150dp" />
+
+            <Button
+                android:id="@+id/Next"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginBottom="5dp"
+                android:layout_marginRight="20dp"
+                android:text="Next" />
 
         </LinearLayout>
 
