--- a/app/src/main/res/layout/marker_info_layout.xml
+++ b/app/src/main/res/layout/marker_info_layout.xml
@@ -9,6 +9,7 @@
         android:layout_height="wrap_content" >
 
         <ImageView
+            android:id="@+id/mainIcon"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginRight="5dp"
@@ -21,8 +22,22 @@
             android:layout_height="wrap_content"
             android:text=""
             android:textSize="16sp"
-
             android:textColor="#F00" />
+
+        <!--<ImageView-->
+            <!--android:id="@+id/markerWeatherIcon"-->
+            <!--android:layout_width="50dp"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:layout_below="@+id/mainIcon"-->
+            <!--android:src="@drawable/camp_icon" />-->
+
+        <!--<TextView-->
+            <!--android:id="@+id/markerCurrentTemp"-->
+            <!--android:layout_width="50dp"-->
+            <!--android:layout_height="50dp"-->
+            <!--android:layout_below="@+id/ivWeatherIcon"-->
+            <!--android:textSize="25sp"-->
+            <!--android:text="71"/>-->
     </RelativeLayout>
 
 
