--- a/app/src/main/res/layout/park_recommendation_layout.xml
+++ b/app/src/main/res/layout/park_recommendation_layout.xml
@@ -17,14 +17,14 @@
             android:textSize="25sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tvAlerts"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:textColor="#F00"
+        <!--<TextView-->
+            <!--android:id="@+id/tvAlerts"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:text=""-->
+            <!--android:textColor="#F00"-->
 
-            android:textSize="16sp" />
+            <!--android:textSize="16sp" />-->
 
         <TextView
             android:id="@+id/tvPhone"
@@ -66,12 +66,23 @@
             android:textSize="15sp"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tvCurrentTemp"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingLeft="20dp"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/ivWeatherIcon"
+                android:layout_width="50dp"
+                android:layout_height="50dp" />
+
+            <TextView
+                android:id="@+id/tvCurrentTemp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="5dp"
+                android:textSize="25sp"/>
+
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
