--- a/app/src/main/res/layout/park_review_layout.xml
+++ b/app/src/main/res/layout/park_review_layout.xml
@@ -1,50 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/Review"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_marginLeft="30dp"
-    android:background="@color/white"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:padding="10dp">
 
-
-    <TextView
-        android:id="@+id/tvReview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_gravity="center"
-        android:text="Rate and Review This Park"
-        android:textStyle="bold"
-        android:textSize="15sp" />
-
-    <RatingBar
-        android:id="@+id/addRatingBar"
-        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="37dp"
-        android:layout_gravity="center"
-        android:clickable="true"
-        android:contextClickable="true"
-        android:isIndicator="false"
-        android:numStars="5"
-        android:stepSize="0.5" />
-
-
-    <EditText
-        android:id="@+id/addReviewTxt"
-        android:layout_width="327dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:ems="10"
-        android:inputType="textMultiLine"
-        android:hint="Share your experience here."
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
-
-    <Button
-        android:id="@+id/btSubmitReview"
+    <LinearLayout
+        android:id="@+id/ratingId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Submit" />
+        android:background="@color/grey"
+        android:orientation="horizontal"
+        android:weightSum="1">
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/ratingUsername"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@mipmap/ic_profile"
+                android:drawablePadding="5dp"
+                android:text="Stefanie"
+                android:textSize="15sp" />
+
+            <RatingBar
+                android:id="@+id/reviewRatingBar"
+                style="@style/Widget.AppCompat.RatingBar.Small"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="left"
+                android:layout_marginLeft="48dp"
+                android:layout_marginStart="48dp"
+                android:isIndicator="true"
+                android:numStars="5"
+                android:rating="4"
+                android:stepSize=".5" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/reviewComment"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/reviewRatingBar"
+            android:layout_marginLeft="48dp"
+            android:paddingTop="15dp"
+            android:text="This is a great place!"
+            android:textSize="12sp" />
+    </LinearLayout>
 </LinearLayout>
